@@ -1,5 +1,6 @@
 
 Version 0.9	- xx August 2001
+  * Add warning checks when deleting variables
   * Fix spurious warning when using lambda in __init__
   * Get setup.py to work on windows, etc. if don't have /tmp
 
